# Com

./: .gitignore  CMakeLists.txt  DBUS_BINDING_COMPLETE.md  DBUS_EVENT_BINDING_SUMMARY.md  INTEGRATION_CHECKLIST.md  QUICK_REFERENCE.txt  README.md  README_CN.md  TRANSPORT_MATRIX.md  install_someip_dependencies.sh  test_all_dbus_bindings.sh  test_dbus_event.sh  verify_someip_integration.sh
archive/: ARCHITECTURE_V3_REFACTORING_SUMMARY.md  CLEANUP_EXECUTION_REPORT.md  CLEANUP_SUMMARY.md  DEVELOPMENT_REFACTORING_PLAN.md  DOCUMENTATION_CLEANUP_PLAN.md  LEGACY_COMMONAPI_IMPLEMENTATION.md  LEGACY_EXTENSION_PLANS.md  PHASE2_IMPLEMENTATION.md  PROTOBUF_SOCKET_BINDING_ARCHIVED.md  README.md  ref.md
archive/deprecated/: README.md  SlotAllocator.hpp.v2.x
archive/old_docs/: ICEORYX2_INTEGRATION_COMPLETE_OLD.md  LEGACY_DYNAMIC_DISCOVERY_DESIGN.md  SERVICE_DISCOVERY_V2_FAST_DDS_DESIGN.md
archive/summaries/: CENTRAL_REGISTRY_SUMMARY.txt  CUSTOM_PROTOCOL_UDP_SUMMARY.txt  DDS_INTEGRATION_SUMMARY.txt  PROTOBUF_SOCKET_SUMMARY.txt  REFACTOR_SUMMARY.txt  SOMEIP_DDS_BRIDGE_SUMMARY.txt  UNIFIED_DDS_BRIDGE_SUMMARY.txt
cmake/: ArxmlToYaml.cmake  DdsBindingConfig.cmake
config/: bindings.yaml
daemon/: lap-registry-init.cpp  man.cpp
daemon/systemd/: README.md  allowed_executables.yaml  config.json  install.sh  install_yaml.py  installation_config.yaml  lap-registry-asil-init.service  lap-registry-asil.socket  lap-registry-init.service  lap-registry-qm-init.service  lap-registry-qm.socket  lap-registry.socket  test_systemd_integration.sh  update_systemd_units.sh
doc/: ARCHITECTURE_REFACTORING_SUMMARY_V2.md  ARCHITECTURE_SUMMARY.md  AUTOSAR_QUICK_REFERENCE.md  AUTOSAR_R24-11_SCAN_REPORT.md  BINDING_SELECTION_GUIDE.md  DBUS_DDS_BRIDGE_INTEGRATION_GUIDE.md  EPOCH_MIGRATION_PLAN.md  EPOCH_SECTION_4.1.10_COMPLETE.md  EXTENSION_GUIDE.md  IMPLEMENTATION_PLAN_UPDATED.md  IMPLEMENTATION_ROADMAP_DETAILED.md  INDEX.md  PROTOBUF_SOCKET_INTEGRATION_GUIDE.md  README.md  SERVICE_DISCOVERY_ARCHITECTURE.md  YAML_CONFIGURATION_SUMMARY.md
doc/architecture/: ARCHITECTURE_SUMMARY.md  COM_ARCHITECTURE.md  SECURITY_ARCHITECTURE_SUMMARY.md  SERVICE_DISCOVERY_ARCHITECTURE.md
doc/guides/: AUTOSAR_R24-11_SERVICE_DISCOVERY_REFERENCE.md  AUTOSAR_REQUIREMENTS_TRACEABILITY.md  COM_QUICK_REFERENCE.md  CUSTOM_PROTOCOL_UDP_INTEGRATION_GUIDE.md  DDS_INTEGRATION_GUIDE.md  README_SOMEIP.md  SOMEIP_DDS_BRIDGE_INTEGRATION_GUIDE.md
doc/planning/: CODE_IMPLEMENTATION_ASSESSMENT.md  CODE_SCAN_SUMMARY_CN.md  IMPLEMENTATION_PLAN_UPDATED.md  IMPLEMENTATION_ROADMAP_DETAILED.md  README.md  V3.1_ARCHITECTURE_UPDATE_SUMMARY.md
doc/planning/archive/: ARCHIVE_README.md  COM_DEVELOPMENT_ROADMAP.md  NEW_ARCHITECTURE_IMPLEMENTATION_PLAN.md
doc/reports/: ARCHITECTURE_ADJUSTMENT_SUMMARY.md  BINDING_ARCHITECTURE_COMPLIANCE_REPORT.md  BINDING_STANDARDIZATION_STATUS.md  DDS_FINDSERVICE_IMPLEMENTATION.md  DOCUMENTATION_INDEX.md  EXECUTIVE_SUMMARY.md  ICEORYX2_INTEGRATION_COMPLETE.md  ICEORYX_INTEGRATION_STATUS.md  IMPLEMENTATION_INDEX.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_STATUS.md  PHASE2_COMPLETE_FEATURES.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE3_IMPLEMENTATION_REPORT.md  PHASE4_DDS_IMPLEMENTATION_STATUS.md  PHASE4_PROGRESS_SUMMARY.md  SOCKET_INTEGRATION.md  SOMEIP_INTEGRATION_SUMMARY.md
source/: DIRECTORY_STRUCTURE.md
source/binding/: README.md
source/binding/common/: BindingTypes.hpp  ITransportBinding.hpp
source/binding/dbus/: DBusFieldBinding.hpp
source/binding/iceoryx2/: README.md
source/binding/socket/: ProtobufSerializer.hpp  SocketFieldBinding.hpp
source/binding/someip/: SomeIpFieldBinding.hpp
source/comapi/src/: Runtime.cpp
source/config/: slot_mapping.yaml
source/inc/: ComTypes.hpp  E2EProtection.hpp  Field.hpp  Method.hpp  ProxyBase.hpp  Runtime.hpp  ServiceHandleType.hpp  SkeletonBase.hpp  ara_com.hpp
source/registry/inc/: RegistryInitializer.hpp  SeqLock.hpp  ServiceSlot.hpp  SharedMemoryRegistry.hpp
source/registry/src/: RegistryInitializer.cpp  SharedMemoryRegistry.cpp
source/runtime/inc/: E2EProtection.hpp  Event.hpp  ProxyBase.hpp  Runtime.hpp  Serialization.hpp  ServiceDiscovery.hpp  ServiceHandleType.hpp  SkeletonBase.hpp
source/runtime/src/: Runtime.cpp
source/src/: Runtime.cpp
systemd/: lap-registry-asil-init.service  lap-registry-asil.socket  lap-registry-qm-init.service  lap-registry-qm.socket
test/binding/dds/: test_dds_binding.cpp  test_dds_cross_process.cpp
test/binding/iceoryx2/: test_iceoryx2_binding_manager_integration.cpp  test_iceoryx2_pubsub.cpp  test_multi_size_messages.cpp
test/examples/: dds_publisher.cpp  dds_subscriber.cpp  test_runtime_basic.cpp
test/examples/commonapi/: README.md  calculator_client.cpp  calculator_server.cpp
test/examples/dbus/: example_dbus_event_publisher.cpp  example_dbus_event_subscriber.cpp  field_client.cpp  field_server.cpp  method_client.cpp  method_server.cpp  simple_publisher.cpp  simple_subscriber.cpp
test/examples/iceoryx2/: README.md  ping_pong_example.cpp  publisher_example.cpp  subscriber_example.cpp
test/examples/socket/: calculator_client.cpp  calculator_server.cpp  event_publisher.cpp  event_subscriber.cpp  field_client.cpp  (+1 more)
test/registry/: test_registry.cpp  test_seqlock.cpp
test/runtime/: test_runtime.cpp  test_runtime_systemd.cpp
test/unittest/: binding_headers_test.cpp  com_dbus_event_test.cpp  com_dbus_field_test.cpp  com_dbus_method_test.cpp  com_socket_connection_test.cpp  com_socket_event_test.cpp  com_socket_field_test.cpp  com_socket_method_test.cpp  com_socket_serializer_test.cpp  com_someip_adapter_test.cpp  com_someip_binding_test.cpp  com_someip_connection_test.cpp  test_multiprocess_registry.cpp
third_library/iceoryx2-0.7.0/: Cargo.toml
tools/: NEXT_STEPS.md  README.md  autosar_compliance_check.sh  build_dds_binding.sh  cleanup_old_directories.sh
tools/arxml2yaml/: README.md  arxml2yaml.py
tools/commonapi/: README.md  generate.sh  generate_new.sh
tools/protobuf/: README.md  calculator.proto  field.proto  generate_protobuf.sh
tools/someip/: README.md  vsomeip_calculator.json
(+38 files in other folders)
